...
    <string name="opponent_display_name">%1$s “%2$s”</string>
    <string name="opponent_ines_nickname">Spring</string>
    <string name="opponent_ines_tag1">Defence</string>
    <string name="opponent_ines_tag2">Counter-attack</string>
    <string name="opponent_ines_tag3">Cool head</string>
    <string name="opponent_ines_tagline">Lets you come, absorbs, smiles. The harder you attack, the more dangerous she gets; her favourite position is slightly worse.</string>
    <string name="opponent_lea_nickname">Tornado</string>
    <string name="opponent_lea_tag1">Attack</string>
    <string name="opponent_lea_tag2">Sacrifices</string>
    <string name="opponent_lea_tag3">Rapid</string>
    <string name="opponent_lea_tagline">Castles on the opposite wing and throws her pawns: your king is a delivery address. Simplifies badly, even two pawns up.</string>
    <string name="opponent_maia_nickname">Neutral</string>
    <string name="opponent_maia_tag1">Maia-3</string>
...
